<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ParseStarterProjectActivity!</string>
    <string name="app_name">DineOn</string>
    <string name="OrderListTitle">Customer Orders</string>
    <string name="button_login">Log In</string>
    <string name="button_facebook">Facebook</string>
    <string name="button_twitter">Twitter</string>
    <string name="create_new_account"><u>Create New Account</u></string>
    <string name="hint_email_address">Email Address</string>
    <string name="password_label">Password</string>
    <string name="password_repeat_label">Repeat Password</string>
    <string name="create_account">Create Account</string>
    <string name="or">Or</string>
    <string name="login_label">Log in to DineOn</string>
    <string name="button_check_in">Check in</string>
    <string name="button_bill">Bill</string>
    <string name="hint_restaurant_code">Restaurant Code</string>
    <string name="option_filter">Filter</string>
    <string name="option_profile">My Profile</string>
    <string name="option_settings">Settings</string>
    <string name="option_view_order">View Order</string>
    <string name="label_title_order_summary">Order Summary</string>
    <string name="button_place_order">Place Order</string>
    <string name="label_tip">Tip (%):</string>
    <string name="content_description_delete_button">Delete Button</string>
    <string name="option_paybill">Pay Your Bill</string>
    <string name="preference_test">Be Happy?</string>
    <string name="preference_behappy_checkbox_key">checkbox_preference_behappy</string>
    <string name="tab_title_profile">Profile</string>
    <string name="tab_title_settings">Settings</string>
    <string name="option_forgot_password"><u>Forgot Password?</u></string>
    <string name="content_description_huskysoft_logo">HuskySoft Logo</string>
    <string name="actionbar_title_restaurant_selection">Pick a Spot</string>
    <string name="image_menu_item">Menu Item Image</string>
    <string name="image_restaurant">Restaurant Image</string>
    <string name="label_address_header">Address</string>
    <string name="label_address_placeholder">Address goes here</string>
    <string name="label_hours_header">Hours</string>
    <string name="label_hours_placeholder">Hours goes here</string>
    <string name="label_phone_placeholder">Call (425) 555&#8211;5555</string>
    <string name="label_make_reservation">Make A Reservation</string>
    <string name="image_profile_picture_placeholder">Address goes here</string>
    <string name="label_name_placeholder">Name goes here</string>
    <string name="label_menu_item_description_placeholder">This is a short description of a menu item at a restaurant.</string>
    <string name="label_allergen_header">Allergens</string>
    <string name="label_allergen_placeholder">Allergens go here</string>
    <string name="option_logout">Logout</string>
    <string name="label_sort_by">Sort By:</string>
    <string name="label_nearby">Sort By Nearby Restaurants</string>
    <string name="label_friends_favorites">Sort By Friends\' Favorites</string>
    <string name="label_my_favorites">Sort By My Favorites </string>
    <string name="label_call">Call Restaurant</string>
    <string name="label_add_to_favorites">Add to Favorites</string>
    <string name="label_make_reservation">Make Reservation</string>
    <string name="activity_start_login">startLoginActivity</string>
    <string name="hint_username">Username</string>
    <string name="facebook_app_id">505185672873933</string>
    <string name="make_request">Make Request</string>
    <string name="request_description">Description&#8320;</string>
    <string name="dineonlogo">DineOn Logo</string>
    <string name="husky_soft_logo">HuskySoft Logo</string>
    <string name="save_changes">Save Changes</string>
    <string name="option_edit_profile">Edit Profile</string>
    <string name="search_restaurant">Search for Restaurant</string>
    <string name="user_old_password">Old Password</string>
    <string name="user_email">Email</string>
    <string name="user_new_password">New Password</string>
    <string name="user_phone">Phone Number</string>
    <string name="cancel">Cancel</string>
    <string name="restaurant_name_here">Restaurant Name Goes Here</string>
    <string name="button_view_order">View Order</string>
    <string name="hours_unknown">Hours are unknown</string>
    <string name="hint_click_more_options">Click for more options</string>
    <string name="hint_special_menuitem_instruction">Place special instructions here</string>
    <string name="restaurants">Restaurants</string>
    <string name="rest_list_pic">Menu item picture</string>
    <string name="medium_text">Medium Text</string>
    <string name="list_down_arrow_button">Indicator to expand the restaurant info</string>
    <string name="label_phone_header">Phone</string>
    <string name="proceed_to_info_description">Proceed to restaurant info</string>
    <string name="menu_item_pic">Picture of the menu item</string>
    <string name="decrement_order">Decrement order button</string>
    <string name="increment_order">Increment order button</string>
    <string name="zero">0</string>
    <string name="decimal_zero">0.00</string>
    <string name="subtotal">Subtotal:</string>
    <string name="tax">Tax:</string>
    <string name="total">Total:</string>
    <string name="price_summary">Price Summary</string>
    <string name="magic_money">Pay with Magic Money!</string>
    <string name="string_format_hours">Hours: %1$s</string>
    <string name="string_format_address">Address: %1$s</string>
    <string name="string_format_phone">Phone: %1$s</string>
    <string name="string_log_out_alert">Are you sure you want to quit?</string>
    <string name="send_request">Send Request</string>
    <string-array name="request_list">
        <item>Water Refill Please!</item>
        <item>Drink Refill Please!</item>
        <item>Call Waiter/Waitress</item>
        <item>Custom Request</item>
    </string-array>
    <string name="subtotal">Subtotal:</string>
    <string name="bill_summary">Bill Summary</string>
    
</resources>
