<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/option_view_order"
        android:showAsAction="ifRoom|withText"
        android:title="@string/option_view_order">
    </item>
    <item
        android:id="@+id/option_check_in"
        android:showAsAction="always|withText"
        android:title="@string/option_check_in">
    </item>
    <item
        android:id="@+id/option_profile"
        android:showAsAction="never"
        android:title="@string/option_profile">
    </item>
    <item
        android:id="@+id/option_settings"
        android:showAsAction="never"
        android:title="@string/option_settings">
    </item>
    <item
        android:id="@+id/option_filter"
        android:showAsAction="never"
        android:title="@string/option_filter">
    </item>

</menu>