<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/create_new_user_account"
    style="@style/DineOnLoginBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_selector" >

    <LinearLayout
        style="@style/DineOnLoginLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/dine_on_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/dineonlogo"
            android:src="@drawable/dineonlogo" />

        <EditText
            android:id="@+id/input_createnewaccount_username"
            style="@style/DineOnLoginForm"
            android:layout_marginBottom="14dp"
            android:hint="@string/hint_username"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/input_createnewaccount_email"
            style="@style/DineOnLoginForm"
            android:layout_marginBottom="15dp"
            android:hint="@string/hint_email_address"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/input_createnewaccount_password"
            style="@style/DineOnLoginForm"
            android:hint="@string/password_label"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/input_createnewaccount_repeat_password"
            style="@style/DineOnLoginForm"
            android:layout_marginTop="18dp"
            android:hint="@string/password_repeat_label"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_create_account"
            style="@style/DineOnLoginButton"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/createnewacct" />

        <TextView
            android:id="@+id/label_or1"
            style="@style/DineOnLoginForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Or" />

        <Button
            android:id="@+id/button_createnewaccount_facebook"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/com_facebook_loginbutton_blue_normal"
            android:text="@string/button_login"
            android:textColor="#FFFFFF" />

        <ImageView
            android:id="@+id/husky_soft_logo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/husky_soft_logo"
            android:src="@drawable/husky_soft_logo" />
    </LinearLayout>

</ScrollView>