<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/restaurant_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp" >

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/label_restaurant_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_address_header"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="3dp" />
        
        <TextView
            android:id="@+id/label_restaurant_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_phone_header"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="3dp" />
        
        <TextView
            android:id="@+id/label_restaurant_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_hours_header"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="3dp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/button_proceed"
        android:contentDescription="@string/proceed_to_info_description"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/navigation_forward" />

</LinearLayout>