<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/label_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/login_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SlidingDrawer
        android:id="@+id/slidingdrawer_login_options"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:content="@+id/content"
        android:handle="@+id/handle" >

        <Button
            android:id="@+id/handle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Handle" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal" >
          
            <Button
            android:id="@+id/button_create_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Create New Account" />
            
            <Button
            android:id="@+id/button_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Forgot your password?" />
            
        </LinearLayout>
    </SlidingDrawer>

    <EditText
        android:id="@+id/input_login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_email_address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/input_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/input_login_email"
        android:layout_below="@+id/input_login_email"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/password_label"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/input_login_password"
        android:layout_alignRight="@+id/input_login_email"
        android:layout_below="@+id/input_login_password"
        android:layout_marginTop="21dp"
        android:text="@string/button_login" />

    <Button
        android:id="@+id/button_facebook_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_login"
        android:layout_alignRight="@+id/button_login"
        android:layout_below="@+id/button_login"
        android:layout_marginTop="23dp"
        android:text="@string/button_twitter" />

    <Button
        android:id="@+id/button_twitter_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_facebook_login"
        android:layout_alignRight="@+id/button_facebook_login"
        android:layout_below="@+id/button_facebook_login"
        android:layout_marginTop="24dp"
        android:text="@string/button_facebook" />

</RelativeLayout>